--- a/src/Styles/Nav.css
+++ b/src/Styles/Nav.css
@@ -1,65 +1,92 @@
-.home {
-    position: relative;
-    background-image: url('./bg.jpg');
-    background-size: cover;
-    height: 100vh;
-  }
-  
-.main h1 {
-    
-    padding-top: 20cm;
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Kanit:wght@500&family=Lato:wght@700&family=Roboto:ital,wght@0,500;1,400&family=Ubuntu&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Bubblegum Sans', cursive;
+    font-family: 'Kanit', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+
+
 }
-  
-nav {
-    display: flex;
+
+.container {
+    width: 100%;
+    height: 100vh;
+    position: relative;
     align-items: center;
-    justify-content: space-between;
-    height: 60px;
-    background-color: #342d2d;
-    padding: 0 20px;
-  }
-  
-  .left {
+    justify-content: center;
     display: flex;
+    padding: 0 5%;
+    background-image: linear-gradient(to bottom, #000000, #0e0e1c);
+}
+
+.bgvideo {
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+@media (min-aspect-ration: 16/9){
+    .bgvideo{
+        width: 100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ration: 16/9){
+    .bgvideo{
+        width: 100%;
+        height: 100;
+    }
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+
+    color: white;
+
+}
+
+nav {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
     align-items: center;
     font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-  }
-  
-  ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
 
-    padding-right: 30cm;
-  }
-  
-  li {
-    margin-right: 20px;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 18px;
-  }
-  
-  .right {
+}
+
+.logo img {
+    width: 70%;
+    height: 80%;
+}
+
+nav ul {
+    list-style: none;
     display: flex;
-    align-items: center;
-  }
-  
-  button {
-    background-color: #4CAF50;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+
+}
+
+nav ul a {
+    margin: 16px;
+    font-size: 28px;
     cursor: pointer;
-  }
-  
+    text-decoration: none;
+    color: white;
+}
+
+nav ul a:hover {
+    color: wheat;
+}
